; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_stat-util.c_fd_is_network_fs.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_stat-util.c_fd_is_network_fs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.statfs = type { i32 }

@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fd_is_network_fs(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.statfs, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i64 @fstatfs(i32 %5, %struct.statfs* %4)
  %7 = icmp slt i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32, i32* @errno, align 4
  %10 = sub nsw i32 0, %9
  store i32 %10, i32* %2, align 4
  br label %13

11:                                               ; preds = %1
  %12 = call i32 @is_network_fs(%struct.statfs* %4)
  store i32 %12, i32* %2, align 4
  br label %13

13:                                               ; preds = %11, %8
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i64 @fstatfs(i32, %struct.statfs*) #1

declare dso_local i32 @is_network_fs(%struct.statfs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
